# newsletter-api

./: Cargo.toml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
tests/: health_check.rs
