[package]
name = "newsletter-api"
version = "0.1.0"
authors = ["Taufiqur Rahman <taufiqur0000@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter-api"

[dev-dependencies]
reqwest = "0.11.10"

[dependencies]
actix-web = "4.0.1"
serde = { version = "1", features = ["derive"]}
tokio = { version = "1.17.0", features = ["full"] }

