[package]
name = "newsletter-api"
version = "0.1.0"
authors = ["Taufiqur Rahman <taufiqur0000@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter-api"

[dev-dependencies]
reqwest = "0.11.10"
once_cell = "1.7.2"

[dependencies]
actix-web = "4.0.1"
chrono = "0.4.19"
config = "0.11"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"]}
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"
tracing-actix-web = "0.5"
tokio = { version = "1.17.0", features = ["full"] }
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
